--- a/src/Weather.css
+++ b/src/Weather.css
@@ -11,7 +11,7 @@
     font-size: 24px;
     font-weight: 100;
     line-height: 29px;
-    margin-top: 20;
+    margin-top: 20px;
 }
 
 .Weather ul {
@@ -47,6 +47,4 @@
     position: relative;
     top: -34px;
     line-height: 1;
-    margin-left: 5px;;
-
 }
