--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,50 +1,49 @@
-
 .Weather {
-    border: 1px solid #dadde1;
-    border-radius: 5px;
     font-family: arial, sans-serif;
-    color: #878787;
+    border: 1px solid #dadde1;
     padding: 16px;
-}
-
-.Weather h1 {
+    border-radius: 4px;
+    color: rgb(135, 135, 135);
+  }
+  
+  .Weather h1 {
     font-size: 24px;
     font-weight: 100;
+    margin: 20px 0 0 0;
     line-height: 29px;
-    margin-top: 20px;
-}
-
-.Weather ul {
+  }
+  
+  .Weather ul {
     margin: 0;
     padding: 0;
-}
-
-.Weather li {
+  }
+  
+  .Weather li {
     font-size: 16px;
     font-weight: 100;
     line-height: 19px;
     list-style: none;
-}
-
-.Weather img {
-    height: 64px;
-    margin-right: 10px;
-    display: inline-block;
-    width: 64px;
-}
-
-.Weather .temperature {
-    font-weight: 400;
+  }
+  
+  .Weather .temperature {
+    font-weight: bold;
     color: rgb(33, 33, 33);
     font-size: 64px;
     line-height: 64px;
-}
-
-.Weather .unit {
+    margin-left: 5px;
+    font-weight: 400;
+    margin-left: 10px;
+  }
+  
+  .Weather canvas {
+    margin: 10px auto;
+  }
+  
+  .Weather .unit {
     color: rgb(33, 33, 33);
     font-size: 16px;
     font-weight: 400;
     position: relative;
-    top: -34px;
     line-height: 1;
-}
+    top: -34px;
+  }
