--- a/src/WeatherCuriosity.css
+++ b/src/WeatherCuriosity.css
@@ -2,7 +2,7 @@
     border: 1px solid #000;
     border-radius: 5px;
     padding: 10px;
-    margin: 10px;
+    margin: 20px 10px 10px;
     text-align: justify;
 }
 
